MDEXP-907 Fixed minor